# cashmere_core

./: .gitignore  1  Cargo.toml  README.md  generate_grpc.bat
account/: Cargo.toml
account/src/: account.rs  group.rs  lib.rs  view.rs
account_server/: Cargo.toml  build.rs
account_server/locales/: en.yml
account_server/protocols/: account.proto  account_service.proto  account_status.proto  login.proto  password.proto  status.proto
account_server/src/: account_service.rs  account_service_handles.rs  lib.rs
auth/: Cargo.toml
auth/src/: check.rs  constant_names.rs  get_auth_token.rs  get_claims_account_and_roles.rs  get_current_role_group.rs  hash_password.rs  jwt.rs  lib.rs  test.rs
cash_core/: Cargo.toml
cash_core/src/: data.rs  data_type.rs  field.rs  general_property_fields.rs  general_schema_fields.rs  ids.rs  lib.rs  macros.rs  manage.rs  manage_from_document.rs  message.rs  property_field.rs  results.rs  schema_field.rs  schema_field_exists.rs  view_rules.rs
cash_result/: Cargo.toml
cash_result/locales/: zh.yml
cash_result/src/: lib.rs
configs/: Cargo.toml  configs_template.toml
configs/documents/: 说明.md
configs/src/: config_trait.rs  configs.rs  configs_file_path.rs  data_server_configs.rs  database_configs.rs  get_data_server_configs.rs  get_database_configs.rs  get_language_code.rs  get_server_configs.rs  init_configs_map.rs  lib.rs  load_configs.rs  manages_configs.rs  read_configs_file_path.rs  server_configs.rs  tls_configs.rs
configs/tests/: get_config_from_map_test.rs  get_configs_test.rs
conversation_system/: Cargo.toml
conversation_system/src/: conversation.rs  lib.rs  terminal_delegate.rs  types.rs
core_service_handles/: Cargo.toml
core_service_handles/src/: lib.rs
data_server/: Cargo.toml
data_server/src/: download_delegator.rs  file_upload_receiver.rs  lib.rs  upload_delegator.rs
data_utils/: Cargo.toml
data_utils/src/: lib.rs
database/: Cargo.toml  configs.toml
database/src/: collection_exists.rs  database_configs.rs  get_cashmere_database.rs  get_collection_by_id.rs  get_database.rs  get_database_name.rs  get_ids_collection.rs  get_manages_collection.rs  get_member_db_view_name.rs  get_member_view.rs  get_mongodb_client.rs  init_ids_count_field.rs  lib.rs
define_utils/: Cargo.toml
define_utils/src/: generate_dart_schema.rs  generate_manage_defines.rs  get_hard_coded.rs  get_id.rs  get_index_map.rs  get_init_items.rs  get_init_view_rules.rs  get_is_searchable.rs  get_name.rs  get_name_map.rs  get_queues.rs  get_schema.rs  get_toml_files_of_dir.rs  get_toml_map.rs  get_tomls_from_pathes.rs  lib.rs
defines/: Cargo.toml
defines/src/: field_ids.rs  lib.rs  manage_ids.rs  utils.rs
dependencies_sync/: Cargo.toml
dependencies_sync/src/: lib.rs
entity/: Cargo.toml
entity/src/: add_entity_to_array_field.rs  add_to_array_field.rs  change_entity_owner.rs  count_entity.rs  delete_entity.rs  delete_entity_map_field_key.rs  entity_exists.rs  exists_by_id.rs  exists_by_name.rs  get_entities.rs  get_entities_by_page.rs  get_entity_by_id.rs  get_entity_by_name.rs  get_entity_by_objectid.rs  get_entity_count.rs  get_entity_field.rs  get_entity_field_as_string.rs  get_entity_field_as_type.rs  get_entity_groups.rs  get_entity_id.rs  get_entity_name.rs  get_entity_owner.rs  get_entry_count.rs  get_new_entity_id.rs  get_query_cursor.rs  insert_entity.rs  insert_entity_map_field.rs  lib.rs  pull_entity_array_field.rs  push_entity_array_field.rs  query_entity_map_field.rs  remove_from_array_field.rs  update_entity_array_element_field.rs  update_entity_array_field.rs  update_entity_array_map_field.rs  update_entity_field.rs  update_entity_fields.rs  update_entity_groups.rs  update_entity_map_field.rs  update_multi_entity_fields.rs  (+2 more)
event/: Cargo.toml
event/src/: event.rs  events_map.rs  handle.rs  handles_map.rs  lib.rs  queque_recievers.rs  queue.rs  queues_map.rs
majordomo/: Cargo.toml
majordomo/src/: init_managers.rs  lib.rs  majordomo.rs  majordomo_arc.rs  manager_inits.rs  managers_map.rs
manage/: Cargo.toml
manage/src/: lib.rs
manage_define/: Cargo.toml  build.rs  define_template.toml
manage_define/3D/: 10021_libraries.toml  10022_assets.toml  10023_sets.toml  10024_projects.toml  10025_sequences.toml  10026_cuts.toml  10027_epics.toml
manage_define/core/: 10000_manages.toml  10001_accounts.toml  10002_groups.toml  10003_event_handles.toml  10004_events.toml  10005_datas.toml  10006_local_codes.toml  10007_message_handles.toml  10008_messages.toml  10009_persons.toml  10010_procedures.toml  10011_templates.toml  10012_show_settings.toml  10014_tasks.toml  10015_view_rules.toml  10016_works.toml  10017_work_nodes.toml  10018_phase_sets.toml  10020_event_queues.toml
manage_define/defines/: 00000_general.toml  00000_general.toml.back  10000_manages.toml  10001_accounts.toml  10002_groups.toml  10003_country_codes.toml  10003_event_handles.toml  10004_event_types.toml  10004_events.toml  10004_member.toml  10005_datas.toml  10006_language_codes.toml  10006_languages.toml  10007_color.toml  10007_message_handles.toml  10008_messages.toml  10009_persons.toml  10010_procedures.toml  10010_recommends.toml  10010_work_procedures.toml  10011_templates.toml  10012_show_settings.toml  10014_tasks.toml  10015_view_rules.toml  10016_status_sets.toml  10016_works.toml  10017_work_nodes.toml  10018_phase_sets.toml  10018_phases.toml  10018_work_phases.toml  10019_phone_area_codes.toml  10020_event_queues.toml  10021_areas.toml  10022_comments.toml  10023_countries.toml  10023_country_codes.toml  10024_tags.toml  10025_categaries.toml  10025_specses.toml  10026_calendars.toml  (+5 more)
manage_define/graph_know/: 30000_points.toml  30001_graphs.toml  30002_roadmaps.toml  30003_individuals.toml  30004_departments.toml  (+11 more)
managers/: Cargo.toml
minit/: Cargo.toml
procedure/: Cargo.toml
property_field/: Cargo.toml
request_utils/: Cargo.toml
runtime_handle/: Cargo.toml
search_engine/: Cargo.toml
server/: Cargo.toml  build.rs
server_template/: Cargo.toml  build.rs  configs.toml
server_utils/: Cargo.toml
(+1303 files in other folders)
