# Author: 闫刚 (yes7rose@sina.com)
# Cargo.toml (c) 2020
# Desc: workspace 工作空间
# Created:  2020-11-16T02:08:10.711Z
# Modified: !date!

[workspace]
resolver = "2"
members = [
  "auth",
  "generate_defines",
  "manage_define",
  "cash_core",
  "cash_result",
  "configs",
  "database",
  "entity",
  "property_field",
  #    "server_template",
  "request_utils",
  "core_service_handles",
  "majordomo",
  "define_utils",
  "managers",
  # "minit",
  "view",
  "dependencies_sync",
  "search_engine",
]

exclude = ["server_template", "minit"]
