# Author: 闫刚 (yes7rose@sina.com)
# Cargo.toml (c) 2020
# Desc: workspace 工作空间
# Created:  2020-11-16T02:08:10.711Z
# Modified: !date!

[workspace]
resolver = "2"
members = [
  "auth",
  "generate_defines",
  "manage_define",
  "cash_core",
  "cash_result",
  "configs",
  "database",
  "entity",
  # "manage_interface",
  #    "server_template",
  "majordomo",
  "managers",
  "define_utils",
  # "minit",
  "view",
  "dependencies_sync",
  "validates",
  "request_utils",
  "core_service_handles",
  "search_engine",
]

exclude = ["server_template", "minit"]
