[package]
name = "account"
version = "0.2.0"
authors = ["yes7rose <yes7rose@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
database = { path = "../database" }
configs = { path = "../configs" }
cash_core = { path = "../cash_core" }
cash_result = { path = "../cash_result" }
manage_define = { path = "../manage_define" }

bson = "2.0.1"
linked-hash-map = "0.5.3"