[package]
name = "account"
version = "0.3.0"
authors = ["yes7rose <yes7rose@sina.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
database = { path = "../database" }
configs = { path = "../configs" }
cash_core = { path = "../cash_core" }
cash_result = { path = "../cash_result" }
manage_define = { path = "../manage_define" }

bson = "2.4.0"
linked-hash-map = "0.5.3"