[package]
name = "account_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
tonic = { version = "0.7.2", features = ["tls"] }
tokio = { version = "1.21.2" }
prost = "0.10.4"
bson = "2.4.0"
chrono = "0.4.19"
log = "0.4.14"

account = { path = "../account" }
auth = { path = "../auth" }
entity = { path = "../entity" }
service_common_handles = { path = "../service_common_handles" }
majordomo = {path = "../majordomo"}
managers = {path = "../managers"}
manage_define = {path = "../manage_define"}
view = {path = "../view"}

[build-dependencies]
tonic-build = "0.7.2"