[package]
name = "auth"
version = "0.2.2"
authors = ["yes7rose <yes7rose@sina.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configs = { path = "../configs" }
manage_define = { path = "../manage_define" }

dependencies_sync = { path = "../dependencies_sync", features = [
  "tonic",
  "tokio",
  "rust-i18n",
  "once_cell",
  "futures",
  "chrono",
  "serde",
  "rust-i18n",
] }

rust-argon2 = "1.0"
jsonwebtoken = "7.2"
serde = { version = "1.0", features = ["derive"] }
