[package]
name = "cash_core"
version = "0.2.0"
authors = ["yan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linked-hash-map = { version = "0.5.3", feature = ["serde_impl"] }
bson = "1.1.0"
serde = "1.0.117"
serde_derive = "1.0.117"
parking_lot = "0.11.0"
toml = "0.5.7"
futures = "0.3.8"
bytes = "1.0.0"

manage_define = {path="../manage_define"}
cash_result = {path="../cash_result"}
property_field = {path="../property_field"}