[package]
name = "cash_core"
version = "0.2.0"
authors = ["yan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"

dependencies_sync = { path = "../dependencies_sync", features = [
    "bson",
    "parking_lot",
    "toml",
    "futures",
    "bytes",
] }

manage_define = { path = "../manage_define" }
cash_result = { path = "../cash_result" }
property_field = { path = "../property_field" }
