[package]
name = "configs"
version = "0.2.1"
authors = ["yes7rose <yes7rose@sina.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0"
serde = "1.0"

dependencies_sync = { path = "../dependencies_sync", features = [
  "log",
  "toml",
  "rust-i18n",
  "once_cell",
] }
