[package]
name = "configs"
version = "0.4.2"
authors = ["yes7rose <yes7rose@sina.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0"
serde = "1.0"
toml = "0.8.6"

dependencies_sync = { path = "../dependencies_sync", features = [
  "log",
  "parking_lot",
  "serde_derive",
  "serde",
  "rust-i18n",
  "once_cell",
] }
