[package]
name = "message"
version = "0.1.0"
authors = ["yes7rose <yes7rose@sina.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.4.0"
sled = "0.34.4"
futures = "0.3.13"
tokio = { version = "1.21.2", features = ["sync"]}
parking_lot = "0.12.1"
serde = "1.0.131"
serde_derive = "1.0.131"
uuid = {version = "1.2.1", features= ["v4"]}
md-5 = "0.10.5"
