[package]
name = "core_service_handles"
version = "0.6.1"
authors = ["yangang <7470718@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"

dependencies_sync = { path = "../dependencies_sync", features = [
    "tonic",
    "bson",
    "futures",
    "tokio",
    "tokio-stream",
    "prost",
    "linked-hash-map",
    "log",
    "chrono",
    "once_cell",
    "rust-i18n",
] }

cash_core = { path = "../cash_core" }
cash_result = { path = "../cash_result" }
configs = { path = "../configs" }
majordomo = { path = "../majordomo" }

managers = { path = "../managers" }
manage_define = { path = "../manage_define" }
auth = { path = "../auth" }
entity = { path = "../entity" }
property_field = { path = "../property_field" }
view = { path = "../view" }
request_utils = { path = "../request_utils" }
service_utils = { path = "../service_utils" }

# [features]
# view_rules_validate = ["view/view_rules_validate"]
