[package]
name = "data_server"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.1"
fs4 = { version = "0.5.4", features = ["tokio-async"] }
tokio = { versions = "1.21.2", features = ["fs"] }
md-5 = "0.10.1"
log = "0.4.17"
simplelog = "0.12.0"
bytes = "1.4"
hex = "0.4.3"
serde = "1.0.131"
serde_derive = "1.0.131"
toml = "0.5.8"
rust-i18n= "1.0"
once_cell = "1.8.0"

configs = { path = "../configs" }
manage_define = { path = "../manage_define" }
cash_result = { path = "../cash_result" }
