[package]
name = "data_server"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md-5 = "0.10.1"
log = "0.4.17"
bytes = "1.4"
hex = "0.4.3"
serde = "1.0.131"
serde_derive = "1.0.131"
toml = "0.5.8"
rust-i18n = "1.0"
once_cell = "1.8.0"

dependencies_sync = { path = "../dependencies_sync", features=["tokio", "fs4", "parking_lot"]}

configs = { path = "../configs" }
manage_define = { path = "../manage_define" }
cash_result = { path = "../cash_result" }
