[package]
name = "data_server"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
rust-i18n = "1.0"
once_cell = "1.8.0"

dependencies_sync = { path = "../dependencies_sync", features = [
    "tokio",
    "fs4",
    "parking_lot",
    "md-5",
    "hex",
    "bytes",
] }

configs = { path = "../configs" }
manage_define = { path = "../manage_define" }
cash_result = { path = "../cash_result" }
