[package]
name = "database"
version = "0.1.0"
authors = ["yes7rose <yes7rose@sina.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tokio-test = "0.4.1"

[dependencies]
configs = {path="../configs"}
cash_core = {path="../cash_core"}
cash_result = {path="../cash_result"}
manage_define = {path="../manage_define"}

#mongodb = {version="2.3.1", default_features=false, features=["async-std-runtime"]}
mongodb = "2.3.1"
tokio = "1.21.2"
toml = {version = "0.5.7", features=["preserve_order"]}
linked-hash-map="0.5.3"
log="0.4.17"