[package]
name = "database"
version = "0.2.0"
authors = ["yes7rose <yes7rose@sina.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tokio-test = "0.4.1"

[dependencies]
serde ={ version = "1.0", features = ["derive"]}
serde_derive = "1.0"

configs = { path = "../configs" }
cash_result = { path = "../cash_result" }
manage_define = { path = "../manage_define" }

dependencies_sync = { path = "../dependencies_sync", features = [
  "tokio",
  "mongodb",
  "bson",
  "rust-i18n",
  "once_cell",
  "serde_json",
  "log",
] }
