[package]
name = "define_utils"
version = "0.1.0"
authors = ["wangrongwen <403271579@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.0.1"
toml = "0.5.8"
linked-hash-map = "0.5.4"

cash_core = {path="../cash_core"}
property_field = {path="../property_field"}