[package]
name = "define_utils"
version = "0.2.2"
authors = ["wangrongwen <403271579@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"

manage_define = { path = "../manage_define" }
cash_core = { path = "../cash_core" }
# property_field = { path = "../property_field" }
view ={ path = "../view"}

dependencies_sync = { path = "../dependencies_sync", features = [
  "bson",
  "toml",
  "log",
  "linked-hash-map",
  "glob",
  "rust-i18n",
] }

