[package]
name = "dependencies_sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# NOTE: cargo workspace 要求必须再一个目录结构下面，所以这里使用了这个单独的包作为同步依赖的包 显得有些繁琐

[dependencies]
futures = { version = "0.3.13", optional = true }
tokio = { version = "1.21.2", features= ["full"], optional = true }
tokio-stream = {version = "0.1.11", optional = true }
parking_lot = {version =  "0.12.1", optional = true }

fs4 = { version = "0.5.4", features = ["tokio-async"], optional = true }

chrono = {version = "0.4.19", optional = true }

mongodb = { version = "2.5.0", optional = true }
bson = {version = "2.6.1", optional = true}
toml = { version = "0.5.8", features = ["preserve_order"], optional = true }

bytes = { verion = "1.4", optional = true }
hex = { version = "0.4.3", optional = true }
linked-hash-map = { version = "0.5.3", optional = true }

serde_derive = { version = "1.0.131", optional = true }
serde = { version = "1.0.131", optional = true }

tower ={ version = "0.4.13", optional = true }
prost = { version = "0.11", optional = true }
tonic = { version = "0.9.2", features = ["tls", "gzip"], optional = true }
tonic-build = { version = "0.9.2", optional = true }

md-5 = { version = "0.10.1", optional = true }

log = { version = "0.4.17", optional = true }
simplelog = { version = "0.12.1", optional = true }


[features]
futures = ["dep:futures"]
tokio = ["dep:tokio"]
tokio-stream = ["dep:tokio-stream"]
parking_lot = ["dep:parking_lot"]

chrono = ["dep:chrono"]

mongodb = ["dep:mongodb"]
bson = ["dep:bson"]
toml = ["dep:toml"]

linked-hash-map = ["dep:linked-hash-map"]
serde = ["dep:serde"]
serde_derive = ["dep:serde_derive"]

tower = ["dep:tower"]
prost = ["dep:prost"]
tonic = ["dep:tonic"]
tonic-build = ["dep:tonic-build"]

fs4 = ["dep:fs4"]

log = ["dep:log"]
simplelog = ["dep:simplelog"]
