[package]
name = "entity"
version = "0.3.0"
authors = ["yes7rose <yes7rose@sina.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = {path="../database"}
cash_core = {path="../cash_core"}
cash_result = {path="../cash_result"}
configs = {path="../configs"}
manage_define = {path="../manage_define"}

async-std = "1.9.0"
futures = "0.3.13"
chrono = { version = "0.4.19", features = ["serde"] }
tokio = {version = "1.21.2"}
#mongodb = {version="2.2.1", default_features=false, features=["async-std-runtime"]}
mongodb = "2.5.0"
serde = "1.0.131"
serde_derive = "1.0.131"
linked-hash-map="0.5.3"

log = "0.4.14"
rust-i18n= "1.0"
once_cell = "1.8.0"
