[package]
name = "entity"
version = "0.5.3"
authors = ["yes7rose <yes7rose@sina.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../database" }
cash_result = { path = "../cash_result" }
configs = { path = "../configs" }
manage_define = { path = "../manage_define" }

dependencies_sync = { path = "../dependencies_sync", features = [
    "log",
    "tokio",
    "futures",
    "chrono",
    "mongodb",
    "rust-i18n",
    "once_cell",
] }

#mongodb = {version="2.2.1", default_features=false, features=["async-std-runtime"]}
serde = "1.0"
serde_derive = "1.0"