[package]
name = "event"
version = "0.1.0"
authors = ["yes7rose <yes7rose@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../database" }
configs = { path = "../configs" }
entity = { path = "../entity" }
view = { path = "../view" }
cash_core = { path = "../cash_core" }
cash_result = { path = "../cash_result" }
manage_define = { path = "../manage_define" }

bson = "2.0.1"
sled = "0.34.4"
futures = "0.3.13"
tokio = { version = "1.4.0", features = ["sync"]}
parking_lot = "0.11.0"
serde = "1.0.131"
serde_derive = "1.0.131"
