[package]
name = "majordomo"
version = "0.4.0"
authors = ["wangrongwen <403271579@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.0.1"
parking_lot = "0.11.1"
log = "0.4.14"

cash_core = {path = "../cash_core"}
cash_result = {path = "../cash_result"}
configs = {path = "../configs"}
managers = {path = "../managers"}
manage_define = {path="../manage_define"}
entity = {path = "../entity"}
property_field = {path = "../property_field"}
