[package]
name = "majordomo"
version = "0.4.0"
authors = ["wangrongwen <403271579@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.10"

dependencies_sync = { path = "../dependencies_sync", features = [
  "bson",
  "parking_lot",
  "log",
  "rust-i18n",
] }

cash_result = { path = "../cash_result" }
configs = { path = "../configs" }
managers = { path = "../managers" }
manage_define = { path = "../manage_define" }
entity = { path = "../entity" }
database = { path = "../database" }
# property_field = { path = "../property_field" }
