[package]
name = "manage"
version = "0.1.0"
authors = ["yes7rose <yes7rose@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = {path="../entity"}
database = {path="../database"}
cash_core = {path="../cash_core"}

serde = "1.0.117"
serde_derive = "1.0.117"
mongodb="1.1.1"
linked-hash-map={version = "0.5.3", features = ["serde_impl"]}
toml = "0.5.7"
tokio = "0.2.22"
futures = "0.3.7"
parking_lot = "0.11.0"
chrono = "0.4.19"
# logging
log = "0.4"
simplelog = "0.8"