[package]
name = "manage_define"
version = "0.3.0"
authors = ["wangrongwen <403271579@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
toml = "0.5.8"
glob = "0.3.0"
bson = "2.4.0"
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
prost = "0.10.4"
tonic = { version = "0.7.2", features = ["tls"] }
serde = "1.0.131"
serde_derive = "1.0.131"
log = "0.4"

property_field = {path="../property_field"}

[build-dependencies]
