[package]
name = "manage_define"
version = "0.6.0"
authors = ["wangrongwen <403271579@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dependencies_sync = {path="../dependencies_sync", features = ["tonic", "toml", "linked-hash-map", "bson", "log"]}

tonic = { version = "0.10.2", features = ["tls"] }
prost = "0.12.1"
serde_derive = { version = "1.0"}
serde = { version = "1.0"}

property_field = {path="../property_field"}

[build-dependencies]
