[package]
name = "managers"
version = "0.4.1"
authors = ["yes7rose <yes7rose@sina.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cash_core = {path="../cash_core"}
cash_result = {path="../cash_result"}
database = {path = "../database"}
entity = {path="../entity"}
configs = {path="../configs"}
manage_define = {path="../manage_define"}
property_field = {path="../property_field"}

dependencies_sync = {path="../dependencies_sync", features = ["tonic", "bson", "mongodb"]}

parking_lot = "0.12.1"
serde = "1.0.131"
serde_derive = "1.0.131"
linked-hash-map = { version = "0.5.6", feature = ["serde_impl"] }

# logging
log = "0.4.17"
rust-i18n= "1.0"
once_cell = "1.8.0"