[package]
name = "minit"
version = "0.2.0"
authors = ["闫刚 <7470718@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cash_core = { path = "../cash_core" }
entity = { path = "../entity" }
defines = { path = "../defines" }
database = { path = "../database" }
configs = { path = "../configs" }

linked-hash-map = { version = "0.5.3", features = ["serde_impl"] }
toml = "0.5.7"
futures = "0.3.8"
chrono = "0.4.19"
tokio = "0.2.23"
clap = "3.0.0-beta.2"

bson = "1.1.0"
mongodb = "1.1.1"


