[package]
name = "minit"
version = "0.2.0"
authors = ["闫刚 <7470718@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cash_core = { path = "../cash_core" }
entity = { path = "../entity" }
manage_define = { path = "../manage_define" }
define_utils = { path = "../define_utils" }
database = { path = "../database" }
configs = { path = "../configs" }

linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
toml = "0.5.7"
futures = "0.3.13"
chrono = "0.4.19"
tokio = "1.14.0"
clap = "3.1.18"

bson = "2.2.0"
#mongodb = {version="2.2.1", default_features=false, features=["async-std-runtime"]}
mongodb = "2.3.1"


