[package]
name = "minit"
version = "0.3.0"
authors = ["闫刚 <7470718@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cash_core = { path = "../cash_core" }
entity = { path = "../entity" }
manage_define = { path = "../manage_define" }
define_utils = { path = "../define_utils" }
database = { path = "../database" }
configs = { path = "../configs" }
auth = { path = "../auth" }
cash_result = { path = "../cash_result" }

dependencies_sync = { path = "../dependencies_sync", features = ["mongodb", "linked-hash-map", "toml", "futures", "chrono", "tokio", "clap"] }
