[package]
name = "procedure"
version = "0.1.0"
authors = ["yes7rose <yes7rose@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cash_core = {path = "../cash_core"}
cash_result = {path = "../cash_result"}
database = {path = "../database"}
entity = {path = "../entity"}
manage_define = {path = "../manage_define"}

linked-hash-map = { version = "0.5.3", features = ["serde_impl"] }
serde = "1.0.117"
serde_derive = "1.0.117"
mongodb = {version="1.2.0", default_features=false, features=["async-std-runtime"]}
