[package]
name = "procedure"
version = "0.1.0"
authors = ["yes7rose <yes7rose@sina.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cash_core = {path = "../cash_core"}
cash_result = {path = "../cash_result"}
database = {path = "../database"}
entity = {path = "../entity"}
manage_define = {path = "../manage_define"}

linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
serde = "1.0.131"
serde_derive = "1.0.131"
#mongodb = {version="2.2.1", default_features=false, features=["async-std-runtime"]}
mongodb = "2.3.1"
