[package]
name = "property_field"
version = "0.1.0"
authors = ["wangrongwen <403271579@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linked-hash-map = { version = "0.5.3", feature = ["serde_impl"] }
bson = "1.1.0"
serde = "1.0.117"
serde_derive = "1.0.117"
toml = "0.5.8"