[package]
name = "request_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# proc-macro = true

[dependencies]
auth ={ path = "../auth" }
manage_define = { path = "../manage_define" }
cash_core = { path = "../cash_core" }
majordomo = { path = "../majordomo" }
managers ={ path = "../managers"}

dependencies_sync = { path = "../dependencies_sync", features = ["tonic", "rust-i18n", "once_cell"] }
