[package]
name = "runtime_handle"
version = "0.1.0"
authors = ["wangrongwen <403271579@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cash_core = {path="../cash_core"}
cash_result = {path="../cash_result"}
tokio="0.2.25"