[package]
name = "search_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configs = { path = "../configs" }
cash_core = { path = "../cash_core" }
cash_result = { path = "../cash_result" }
manage_define = { path = "../manage_define" }
database = { path = "../database" }
entity ={ path = "../entity"}
majordomo ={ path = "../majordomo"}
managers ={ path = "../managers"}

dependencies_sync = { path = "../dependencies_sync", features = [
  "tokio",
  "mongodb",
  "bson",
  "rust-i18n",
  "once_cell",
  "tantivy",
  "serde_json",
  "log",
  "cang-jie",
  "jieba-rs",
] }

