[package]
name = "search_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configs = { path = "../configs" }
cash_core = { path = "../cash_core" }
cash_result = { path = "../cash_result" }
manage_define = { path = "../manage_define" }
database = { path = "../database" }
entity ={ path = "../entity"}
majordomo ={ path = "../majordomo"}
managers ={ path = "../managers"}
server_utils ={ path = "../server_utils"}

tantivy = { version = "0.21.1"}
# tantivy = {git = "https://github.com/quickwit-oss/tantivy.git", optional = true}
# cang-jie ={ git = "https://github.com/cashmerepipeline/cang-jie.git", optional = true}
cang-jie = { version = "0.18.0"}
jieba-rs = { version = "0.6.8"}

serde = { version = "1.0", features = ["derive"] }
serde_derive = { version = "1.0"}

dependencies_sync = { path = "../dependencies_sync", features = [
  "tokio",
  "mongodb",
  "bson",
  "rust-i18n",
  "once_cell",
  # "tantivy",
  "serde_json",
  "log",
] }

